[package]
authors = ["Aiden Langley <me@aidenlangley.com>"]
categories = ["date-and-time"]
description = "A simple extension of chrono. Answers questions like: how much time has elapsed since date y? How long until date x will be upon us?"
documentation = "https://github.com/aidenlangley/chrono_elapsed"
edition = "2018"
homepage = "https://github.com/aidenlangley/chrono_elapsed"
keywords = ["chrono", "duration", "due", "elapsed", "datetime"]
license = "MIT OR Apache-2.0"
name = "chrono_elapsed"
readme = "README.md"
repository = "https://github.com/aidenlangley/chrono_elapsed"
version = "0.1.46"

[dependencies]
chrono = "0.4.19"
libmath = "0.2.1"
